homepage is now responsive

--- a/contact.html
+++ b/contact.html
@@ -90,20 +90,17 @@
                     <div class="row">
                       <div class="social-media-links-wrapper text-center mt-4">
                         <a href="https://github.com/iAmAlwaysHome" class="social-url-wrapper p-2">
-                          <i class="social-media-icon p-2 rounded fab fa-github " ></i>
-                        </a>
+                          <i class="social-media-icon p-2 rounded fab fa-github " ></i>  </a>
                         <a href="https://www.linkedin.com/in/" class="social-url-wrapper p-2">
-                          <i class="social-media-icon p-2 rounded fab fa-linkedin " ></i>
-                        </a>
+                          <i class="social-media-icon p-2 rounded fab fa-linkedin " ></i>  </a>
                         <a href="https://t.me/callme3times" class="social-url-wrapper p-2">
-                          <i class="social-media-icon p-2 rounded fab fa-telegram " ></i>
-                        </a>
+                          <i class="social-media-icon p-2 rounded fab fa-telegram " ></i>  </a>
                         <a  class="social-url-wrapper p-2">
-                          <i class="social-media-icon p-2 rounded fab fa-discord " id="discord-contact"></i>
-                          
-                        </a>
+                          <i class="social-media-icon p-2 rounded fab fa-discord " id="discord-contact"></i>   </a>
                         <a  class="social-url-wrapper p-2">
-                          <i class="social-media-icon p-2 rounded  fa-solid fa-square-envelope " id="email-contact"></i></a>
+                          <i class="social-media-icon p-2 rounded  fa-solid fa-envelope " id="email-contact"></i></a>
+                        <a href="https://twitter.com/meiamalwayshome" class="social-url-wrapper p-2">
+                            <i class="social-media-icon p-2 rounded fa-brands fa-twitter " ></i>  </a>
                           
                       </div>                    
                     </div> 
