less heavy hero-text. cat animation

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
               <div class="col-8">                  
                   <div class="herosection mt-5">                      
                     <h1 class="username-lg"  >
-                      <span class="hero-text-line">Hey, <a class="hero-name" href="/about.html" >I'm Lina.</a> A software developer</span><br>
-                      <span class="hero-text-line">from 🇺🇦 Ukraine. I'm at the start</span><br>
-                      <span class="hero-text-line">of my programming career.</span><br><br>   
+                      <span class="hero-text-line">Hi, <a class="hero-name" href="/about.html" >I'm Lina.</a> A software developer</span><br>
+                      <span class="hero-text-line">from 🇺🇦. I'm at the start of my</span><br>
+                      <span class="hero-text-line">programming career.</span><br><br>   
                       <a class=" display-mob"  href="/contact.html"> <span id="mob-action">Hire me</span>  😇</a>                 
                     </h1>
                   </div>
