--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
               <div class="col-9"></div>
               <div class="col-2">
                 
-                  <nav class="navbar navbar-expand-lg navbar-dark .bg-transparent">
+                  <nav class="navbar navbar-expand-lg navbar-light .bg-transparent">
                     <a class="navbar-brand" href="/index.html"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
