--- a/contact.html
+++ b/contact.html
@@ -82,12 +82,12 @@
                 <a href="https://github.com/iAmAlwaysHome" target="_blank" class="social-url-wrapper p-2">
                   <i class="socialmediaicon2 p-2 rounded fab fa-github " ></i></a>
                   <a  class="social-url-wrapper p-2" title="Click to copy">
-                    <i class="socialmediaicon2 p-2 rounded  fa-solid fa-envelope " id="email-contact"></i></a>
+                    <i class="socialmediaicon2 p-2 rounded  fa-solid fa-envelope " id="email-contact2"></i></a>
                 <a href="https://t.me/callme3times" target="_blank" class="social-url-wrapper p-2">
                   <i class="socialmediaicon2 p-2 rounded fab fa-telegram " ></i></a><br>
                 <a  class="social-url-wrapper p-2"   title="Click to copy">
-                  <i class="socialmediaicon2 p-2 rounded fab fa-discord " id="discord-contact"></i></a>                  
-                  <a href="https://www.linkedin.com/in/" target="_blank" class="social-url-wrapper p-2">
+                  <i class="socialmediaicon2 p-2 rounded fab fa-discord " id="discord-contact2"></i></a>                  
+                  <a href="https://www.linkedin.com/in/eprotsenko" target="_blank" class="social-url-wrapper p-2">
                     <i class="socialmediaicon2 p-2 rounded fab fa-linkedin " ></i></a>
                 <a href="https://twitter.com/meiamalwayshome" target="_blank" class="social-url-wrapper p-2">
                     <i class="socialmediaicon2 p-2 rounded fa-brands fa-twitter " ></i> </a>                      
@@ -186,7 +186,7 @@
                     <i class="social-media-icon p-2 rounded fab fa-telegram " ></i></a><br>
                   <a  class="social-url-wrapper p-2"   title="Click to copy">
                     <i class="social-media-icon p-2 rounded fab fa-discord " id="discord-contact"></i></a>                  
-                    <a href="https://www.linkedin.com/in/" target="_blank" class="social-url-wrapper p-2">
+                    <a href="https://www.linkedin.com/in/eprotsenko" target="_blank" class="social-url-wrapper p-2">
                       <i class="social-media-icon p-2 rounded fab fa-linkedin " ></i></a>
                   <a href="https://twitter.com/meiamalwayshome" target="_blank" class="social-url-wrapper p-2">
                       <i class="social-media-icon p-2 rounded fa-brands fa-twitter " ></i> </a>                      
