fixed github api call for last commit

--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
                       I love programming, travelling and learning new things.<br><br>
                       I had the chance to study math, programming and game design<br> in 4 countries: 🇺🇦 Ukraine, 🇷🇺 Russia, 🏴󠁧󠁢󠁳󠁣󠁴󠁿 Scotland and now 🇨🇭 Switzerland.<br> I also attended Y Combinator startup school.<br><br>                      
                       Amongst too many things I'm curious about, I'm passionate about<br> technology, entrepreneurship, innovation, and the internet.<br><br>
-                      Right now I'm looking for an entry-level position in  💻 <a class="hero-name"  href="/work.html" target="_blank">software development.</a><br><br>
-                      <a class=" resume" href="/evelina-svitlana-protsenko-resume.pdf"> <i class="fa-solid fa-file-arrow-down"></i> Download my resume.</a> 
+                      Right now I'm looking for an entry-level position in  💻 <a class="hero-name"  href="/work.html" target="_blank">software development.</a>
+                       
                     </h1>
                   </div>
               </div>                
@@ -66,8 +66,8 @@
                       I love programming, travelling and learning new things.<br><br>
                       I had the chance to study math, programming and game design<br> in 4 countries: 🇺🇦 Ukraine, 🇷🇺 Russia, 🏴󠁧󠁢󠁳󠁣󠁴󠁿 Scotland and now 🇨🇭 Switzerland.<br> I also attended Y Combinator startup school.<br><br>                      
                       Amongst too many things I'm curious about, I'm passionate about<br> technology, entrepreneurship, innovation, and the internet.<br><br>
-                      Right now I'm looking for an entry-level position in  💻 <a class="hero-name"  href="/work.html" target="_blank">software development.</a><br><br>
-                      <a class=" resume " href="/evelina-svitlana-protsenko-resume.pdf"> <i class="fa-solid fa-file-arrow-down " ></i> Download my resume.</a> 
+                      Right now I'm looking for an entry-level position in  💻 <a class="hero-name"  href="/work.html" target="_blank">software development.</a>
+                       
                     </h1>
                   </div>
                   <a  href="/work.html" id="mob-action-link2"><span id="mob-action2" >Check out my work</span></a>    
