put source code link as navbar-brand for submission

--- a/contact.html
+++ b/contact.html
@@ -232,7 +232,7 @@
             <div class="container-fluid">
               <div class="col-1"></div>
               <div class="col-2">
-                <a class="navbar-brand">Evelina-Svitlana Protsenko</a>
+                <a class="navbar-brand" href="https://github.com/iAmAlwaysHome/sc-responsive-w4" alt="this project source code"><i class="fa-brands fa-github" style="font-size: smaller;"></i> source code</a>
               </div>
               <div class="col-2"></div>
               <div class="col-6 text-end">
