reworked work.html for mobile

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                   </h1>
                 </div>
                 <a href="/contact.html" id="mob-action-link2">
-                  <span id="mob-action2">Let's talk</span>
+                  <span id="mob-action2">Contact me</span>
                 </a>
               </div>
             </div>
@@ -58,7 +58,7 @@
             <div class="col-1"></div>
             <div class="col-2 ">
               <a class="hero-action " href="/contact.html">
-                <span id="action">Let's talk</span>
+                <span id="action">Contact me</span>
               </a>
               <br>
             </div>
