--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <br>
                     <br>
                     <a class=" display-mob" href="/work.html" alt="Lina's work">
-                      <span id="mob-action">Check out my works</span>
+                      <span id="mob-action">Look at my works</span>
                     </a>
                   </h1>
                 </div>
@@ -61,9 +61,9 @@
             </div>
             <div class="row ">
               <div class="col-2"></div>
-              <div class="col-8">
+              <div class="col-8  action-box">
                 <a href="/work.html" id="mob-action-link2" alt="Lina's work">
-                  <span id="mob-action2">Check out my works</span>
+                  <span id="mob-action2">Look at my works</span>
                 </a>
               </div>
               <div class="col-2"></div>
@@ -85,7 +85,7 @@
                   </h1>
                 </div>
                 <a href="/contact.html" id="mob-action-link" alt="About Lina">
-                  <span id="mob-action">Check out my works</span>
+                  <span id="mob-action">Look at my works</span>
                 </a>
               </div>
               <div class="col-1"></div>
@@ -94,9 +94,9 @@
           <div class="fixed-bottom">
             <div class="row hide-mob ">
               <div class="col-7"></div>
-              <div class="col-4 ">
+              <div class="col-4 action-box">
                 <a class="hero-action " href="/work.html" alt="Lina's work">
-                  <span id="action">Check out my works</span>
+                  <span id="action">Look at my works</span>
                 </a>
                 <br>
               </div>
