--- a/work.html
+++ b/work.html
@@ -66,13 +66,13 @@
               <div class="col-1"></div>
               <div class="col-8">
                 <div class="herosection mt-5">
-                  <h2 class="f4 mb3">> recent projects <span class="b blink--1">|</span>
+                  <h2 class="f4 mb3">> recent projects <span class= "b name-link blink--1">|</span>
                   </h2>
                   <div class="mb3">
                     <div class="lh-copy">
                       <a target="_blank" class="link black-80 " href="https://github.com/iAmAlwaysHome/simplified-bash" alt="Project simplified bash github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                        <span class="b black-80"> Simplified Bash</span>
+                        <span class= "b name-link black-80"> Simplified Bash</span>
                       </a>
                       <span class="br1 bg-blue white ph1 f7 b"> group project</span>
                       <span class="br1 bg-red white ph1 f7 b"> c</span>
@@ -87,7 +87,7 @@
                     <div class="lh-copy">
                       <a target="_blank" class="link black-80 " href="https://github.com/iAmAlwaysHome/wireframe-renderer" alt="Project wireframe renderer github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                        <span class="b black-80"> Wireframe Renderer</span>
+                        <span class= "b name-link black-80"> Wireframe Renderer</span>
                       </a>
                       <span class="br1 bg-red white ph1 f7 b">c</span>
                       <span class="br1 bg-black-40 white ph1 f7 b"> computer graphics</span>
@@ -98,7 +98,7 @@
                     <div class="lh-copy">
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/mylibc" alt="Project libc github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                        <span class="b black-80"> Mylibc</span>
+                        <span class= "b name-link black-80"> Mylibc</span>
                       </a>
                       <span class="br1 bg-red white ph1 f7 b">c</span>
                     </div>
@@ -111,7 +111,7 @@
                       </a>
                       <a target="_blank" class="link b black-80 " href="https://astonishing-pithivier-fc247a.netlify.app" alt="Project Overwatch landing page live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
-                        <span class="b black-80"> Overwatch Landing Page</span>
+                        <span class= "b name-link black-80"> Overwatch Landing Page</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
                       <span class="br1 bg-green white ph1 f7 b">bootstrap</span>
@@ -127,7 +127,7 @@
                       </a>
                       <a target="_blank" class="link b black-80 " href="https://gleeful-croissant-438e0b.netlify.app/" alt="Weather Web App landing page live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
-                        <span class="b black-80"> Weather Web App</span>
+                        <span class= "b name-link black-80"> Weather Web App</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
                       <span class="br1 bg-green white ph1 f7 b">bootstrap</span>
@@ -135,7 +135,7 @@
                       <span class="br1 bg-black-40 white ph1 f7 b">css</span>
                       <span class="br1 bg-black-40 white ph1 f7 b">api</span>
                     </div>
-                    <p class="mb2 mv1 gray f7 lh-copy measure-wide"> A dashboard with live weather conditions for the specified city for the next 7 days. Users can input city manually or allow app to locate them. Displays time. Uses OpenWeather and Geolocation API data. </p>
+                    <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Shows weather for the specified city for the next 7 days. Users can input city manually or allow app to locate them. Displays time. Uses OpenWeather and Geolocation API data. </p>
                   </div>
                   <div class="mb3">
                     <div class="lh-copy">
@@ -144,7 +144,7 @@
                       </a>
                       <a target="_blank" class="link b black-80 " href="https://frolicking-blini-8ca9d4.netlify.app" alt="My Personal Website live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
-                        <span class="b black-80"> My Personal Website</span>
+                        <span class= "b name-link black-80"> My Personal Website</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
                       <span class="br1 bg-green white ph1 f7 b">bootstrap</span>
@@ -152,14 +152,14 @@
                       <span class="br1 bg-black-40 white ph1 f7 b">css</span>
                       <span class="br1 bg-black-40 white ph1 f7 b">api</span>
                     </div>
-                    <p class="mb2 mv1 gray f7 lh-copy measure-wide"> The website you are browsing! Uses html canvas for cursor trail, serves GitHub API data. Features a CSS drawing of a cat. </p>
+                    <p class="mb2 mv1 gray f7 lh-copy measure-wide"> The website you are browsing! HTML canvas are used for cursor trail. Serves GitHub API data. Features a CSS drawing of a cat. </p>
                   </div>
-                  <h2 class="f4 mb3">> work in progress</h2>
+                  <h2 class="f4 mb3 my-3">> work in progress</h2>
                   <ul class="list pa0">
                     <div>
                       <div class="mb3">
                         <div class="lh-copy">
-                          <span class="b black-80"> Raytracing Shooter </span>
+                          <span class= "b  black-80"> Raytracing Shooter </span>
                           <span class="br1 bg-blue white ph1 f7 b"> group project</span>
                           <span class="br1 bg-red white ph1 f7 b"> c</span>
                           <span class="br1 bg-black-40 white ph1 f7 b"> computer graphics</span>
@@ -176,7 +176,7 @@
                     <div>
                       <div class="mb3">
                         <div class="lh-copy">
-                          <span class="b black-80"> Weather Web App 2.0</span>
+                          <span class= "b  black-80"> Weather Web App 2.0</span>
                           <span class="br1 bg-orange white ph1 f7 b">javascript</span>
                           <span class="br1 bg-green white ph1 f7 b">React</span>
                           <span class="br1 bg-black-40 white ph1 f7 b">html</span>
@@ -194,13 +194,13 @@
               <div class="col-1"></div>
               <div class="col-8 mx-auto">
                 <div class="herosection mt-5">
-                  <h2 class="f4 mb3">> recent projects <span class="b blink--1 ">|</span>
+                  <h2 class="f4 mb3">> recent projects <span class= "b name-link blink--1 ">|</span>
                   </h2>
                   <div class="mb3 pt-2">
                     <div class="lh-copy">
                       <a target="_blank" class="link black-80 " href="https://github.com/iAmAlwaysHome/simplified-bash" alt="Project simplified bash github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                        <span class="b black-80"> Simplified Bash</span>
+                        <span class= "b name-link black-80"> Simplified Bash</span>
                       </a>
                       <span class="br1 bg-blue white ph1 f7 b"> group project</span>
                       <span class="br1 bg-red white ph1 f7 b"> c</span>
@@ -215,7 +215,7 @@
                     <div class="lh-copy">
                       <a target="_blank" class="link black-80 " href="https://github.com/iAmAlwaysHome/wireframe-renderer" alt="Project wireframe renderer github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                        <span class="b black-80"> Wireframe Renderer</span>
+                        <span class= "b name-link black-80"> Wireframe Renderer</span>
                       </a>
                       <span class="br1 bg-red white ph1 f7 b">c</span>
                       <span class="br1 bg-black-40 white ph1 f7 b"> computer graphics</span>
@@ -226,7 +226,7 @@
                     <div class="lh-copy">
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/mylibc" alt="Project libc github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                        <span class="b black-80"> Mylibc</span>
+                        <span class= "b name-link black-80"> Mylibc</span>
                       </a>
                       <span class="br1 bg-red white ph1 f7 b">c</span>
                       <p class="mb2 mv1 gray f7 lh-copy measure-wide"> A few recoded functions of the C standard library. </p>
@@ -239,7 +239,7 @@
                       </a>
                       <a target="_blank" class="link b black-80 " href="https://astonishing-pithivier-fc247a.netlify.app" alt="Project Overwatch landing page live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
-                        <span class="b black-80"> Overwatch Landing Page</span>
+                        <span class= "b name-link black-80"> Overwatch Page</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
                       <span class="br1 bg-green white ph1 f7 b">bootstrap</span>
@@ -255,7 +255,7 @@
                       </a>
                       <a target="_blank" class="link b black-80 " href="https://gleeful-croissant-438e0b.netlify.app/" alt="Weather Web App landing page live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
-                        <span class="b black-80"> Weather Web App</span>
+                        <span class= "b name-link black-80"> Weather Web App</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
                       <span class="br1 bg-green white ph1 f7 b">bootstrap</span>
@@ -272,14 +272,14 @@
                       </a>
                       <a target="_blank" class="link b black-80 " href="https://frolicking-blini-8ca9d4.netlify.app" alt="My Personal Website live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
-                        <span class="b black-80"> My Personal Website</span>
+                        <span class= "b name-link black-80"> My Website</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
                       <span class="br1 bg-green white ph1 f7 b">bootstrap</span>
                       <span class="br1 bg-black-40 white ph1 f7 b">html</span>
                       <span class="br1 bg-black-40 white ph1 f7 b">css</span>
                       <span class="br1 bg-black-40 white ph1 f7 b">api</span>
-                      <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Uses html canvas for cursor trail, serves GitHub API data. </p>
+                      <p class="mb2 mv1 gray f7 lh-copy measure-wide"> HTML canvas are used for cursor trail. Serves GitHub API data.</p>
                     </div>
                   </div>
                   <h2 class="f4 mb3 pt-3">> work in progress</h2>
@@ -287,7 +287,7 @@
                     <div>
                       <div class="mb3">
                         <div class="lh-copy">
-                          <span class="b black-80"> Raytracing Shooter </span>
+                          <span class= "b  black-80"> Raytracing Shooter </span>
                           <span class="br1 bg-blue white ph1 f7 b"> group project</span>
                           <span class="br1 bg-red white ph1 f7 b"> c</span>
                           <span class="br1 bg-black-40 white ph1 f7 b"> computer graphics</span>
@@ -304,7 +304,7 @@
                     <div>
                       <div class="mb3">
                         <div class="lh-copy">
-                          <span class="b black-80"> Weather Web App 2.0</span>
+                          <span class= "b  black-80"> Weather Web App 2.0</span>
                           <span class="br1 bg-orange white ph1 f7 b">javascript</span>
                           <span class="br1 bg-green white ph1 f7 b">React</span>
                           <span class="br1 bg-black-40 white ph1 f7 b">html</span>
