--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,8 @@
             </div>
           </div>
           <div class="row middle-content cat-phones-hide">
-            <div class="col-5 ">
+            <div class="col-6"></div>
+            <div class="col-1 ">
               <div class="container">
                 <div class="cat">
                   <div class="ears outline">
@@ -145,7 +146,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-7 contact-links-col">
+            <div class="col-3 contact-links-col">
               <div class="social-media-links-wrapper mt-4 ">
                 <a href="https://github.com/iAmAlwaysHome" target="_blank" class="social-url-wrapper p-2" alt="Evelina-Svitlana Protsenko github">
                   <i class="social-media-icon p-2 rounded fab fa-github "></i>
