added presentation link to work.html, removed resume from menu

--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
                 <div class="container-fluid">
                   <div class="col-1"></div>
                   <div class="col-2">
-                    <a class="navbar-brand" href="https://github.com/iAmAlwaysHome/sc-responsive-w4" alt="this project source code"><i class="fa-brands fa-github" style="font-size: smaller;"></i> source code</a>
+                    <a class="navbar-brand" >Evelina-Svitlana Protsenko</a>
                   </div>
                   <div class="col-2"></div>
                   <div class="col-6 text-end">
@@ -50,10 +50,7 @@
                           <li class="nav-item">
                             <a class="nav-link " href="/contact.html" alt="Lina's contact">Contact</a>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link " href="/evelina-svitlana-protsenko-resume.pdf" alt="Lina's resume">
-                              <i class="fa-solid fa-file-arrow-down" style="font-size: 80%;"></i> Resume </a>
-                          </li>
+             
                         </ul>
                       </div>
                     </div>
@@ -70,6 +67,9 @@
                   </h2>
                   <div class="mb3">
                     <div class="lh-copy">
+                      <a target="_blank" class="link b black-80 " href="https://docs.google.com/presentation/d/e/2PACX-1vQSxwSMoJDOQPgxk54X9hex6qQ2wNgS5lrL-LxMWLos_R5PeMSnAYUUB9rMKJOcoukkRApPxQK3qkh5/pub?start=false&loop=false&delayms=3000" alt="Project simplified bash slides">
+                        <i class="fa-solid fa-person-chalkboard" style="font-size: smaller;"></i>
+                      </a>
                       <a target="_blank" class="link black-80 " href="https://github.com/iAmAlwaysHome/simplified-bash" alt="Project simplified bash github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
                         <span class= "b name-link black-80"> Simplified Bash</span>
@@ -91,6 +91,7 @@
                       </a>
                       <span class="br1 bg-red white ph1 f7 b">c</span>
                       <span class="br1 bg-black-40 white ph1 f7 b"> computer graphics</span>
+                      <span class="br1 bg-black-40 white ph1 f7 b"> macOS</span>
                     </div>
                     <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Renders a simple wireframe model of a landscape from given 3D coordinates. User can translate, zoom, rotate the rendered model and choose its projection type. </p>
                   </div>
@@ -198,6 +199,9 @@
                   </h2>
                   <div class="mb3 pt-2">
                     <div class="lh-copy">
+                      <a target="_blank" class="link b black-80 " href="https://docs.google.com/presentation/d/e/2PACX-1vQSxwSMoJDOQPgxk54X9hex6qQ2wNgS5lrL-LxMWLos_R5PeMSnAYUUB9rMKJOcoukkRApPxQK3qkh5/pub?start=false&loop=false&delayms=3000" alt="Project simplified bash slides">
+                        <i class="fa-solid fa-person-chalkboard" style="font-size: smaller;"></i>
+                      </a>
                       <a target="_blank" class="link black-80 " href="https://github.com/iAmAlwaysHome/simplified-bash" alt="Project simplified bash github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
                         <span class= "b name-link black-80"> Simplified Bash</span>
@@ -219,6 +223,7 @@
                       </a>
                       <span class="br1 bg-red white ph1 f7 b">c</span>
                       <span class="br1 bg-black-40 white ph1 f7 b"> computer graphics</span>
+                      <span class="br1 bg-black-40 white ph1 f7 b"> macOS</span>
                       <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Renders 3D coordinates into a wireframe model. </p>
                     </div>
                   </div>
