--- a/contact.html
+++ b/contact.html
@@ -233,7 +233,7 @@
             <div class="container-fluid">
               <div class="col-1"></div>
               <div class="col-2">
-                <a class="navbar-brand" href="https://github.com/iAmAlwaysHome/sc-responsive-w4" alt="this project source code"><i class="fa-brands fa-github" style="font-size: smaller;"></i> source code</a>
+                <a class="navbar-brand" >Evelina-Svitlana Protsenko</a>
               </div>
               <div class="col-2"></div>
               <div class="col-6 text-end">
@@ -258,10 +258,7 @@
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/contact.html" alt="Lina's contact">Contact</a>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link " href="/evelina-svitlana-protsenko-resume.pdf" alt="Lina's resume">
-                          <i class="fa-solid fa-file-arrow-down" style="font-size: 80%;"></i> Resume </a>
-                      </li>
+                      
                     </ul>
                   </div>
                 </div>
