new nav brand. flag emoji pictures

--- a/work.html
+++ b/work.html
@@ -9,8 +9,8 @@
     <script src="https://kit.fontawesome.com/0dcbce5e8a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/src/styles.css" />
-    <link rel="stylesheet" href="/src/styleWork.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/styleWork.css" />
   </head>
   <body>
     <div class="preloader">
@@ -21,11 +21,11 @@
         <div class="container-fluid">
           <div class="fixed-top">
             <div class="row ">
-              <nav class="navbar navbar-expand-lg navbar-light bg-transparent" aria-label="Offcanvas navbar large">
+              <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-transparent" aria-label="Offcanvas navbar large">
                 <div class="container-fluid">
                   <div class="col-1"></div>
                   <div class="col-2">
-                    <a class="navbar-brand" >Evelina-Svitlana Protsenko</a>
+                    <a class="navbar-brand" href="/index.html" alt="Homepage">> $ cd /home/  <span class="terminal blink--1">&block;</span></a>
                   </div>
                   <div class="col-2"></div>
                   <div class="col-6 text-end">
@@ -40,17 +40,15 @@
                       <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 text-center">
                           <li class="nav-item">
-                            <a class="nav-link  " href="/index.html" alt="Homepage">Home</a>
-                          <li class="nav-item">
-                            <a class="nav-link  " href="/about.html" alt="About Lina">About</a>
+                            <a class="nav-link " href="/about.html" alt="About Lina">About</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link  active" aria-current="page" href="/work.html" alt="Lina's Work">Work</a>
+                            <a class="nav-link " href="/work.html" alt="Lina's Work">Work</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link " href="/contact.html" alt="Lina's contact">Contact</a>
                           </li>
-             
+                          
                         </ul>
                       </div>
                     </div>
@@ -58,12 +56,12 @@
                   <div class="col-1"></div>
                 </div>
               </nav>
-            </div>
+            </div><br><br><br>
             <div class="row works hide-mob">
               <div class="col-1"></div>
               <div class="col-8">
                 <div class="herosection mt-5">
-                  <h2 class="f4 mb3">> recent projects <span class= "b name-link blink--1">|</span>
+                  <h2 class="f4 mb3">> recent projects 
                   </h2>
                   <div class="mb3">
                     <div class="lh-copy">
@@ -155,7 +153,7 @@
                     </div>
                     <p class="mb2 mv1 gray f7 lh-copy measure-wide"> The website you are browsing! HTML canvas are used for cursor trail. Serves GitHub API data. Features a CSS drawing of a cat. </p>
                   </div>
-                  <h2 class="f4 mb3 my-3">> work in progress</h2>
+                  <h2 class="f4 mb3 my-3">> work in progress </h2>
                   <ul class="list pa0">
                     <div>
                       <div class="mb3">
@@ -195,7 +193,7 @@
               <div class="col-1"></div>
               <div class="col-8 mx-auto">
                 <div class="herosection mt-5">
-                  <h2 class="f4 mb3">> recent projects <span class= "b name-link blink--1 ">|</span>
+                  <h2 class="f4 mb3">> recent projects 
                   </h2>
                   <div class="mb3 pt-2">
                     <div class="lh-copy">
