--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
     <script src="https://kit.fontawesome.com/0dcbce5e8a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/src/styles.css" />
-    <link rel="stylesheet" href="/src/styleAbout.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/styleAbout.css" />
   </head>
   <body>
     <div class="preloader">
@@ -24,8 +24,8 @@
               <div class="col-4"></div>
               <div class="col-7">
                 <div class="herosection mt-5">
-                  <h1 class="username-lg"> Hello, my name is Evelina-Svitlana Protsenko but you can call me Lina. <br> I love programming, travelling and learning new things. <br>
-                    <br> I had the chance to study math, programming and game design <br> in 4 countries: 🇺🇦 Ukraine, 🇷🇺 Russia, 🏴󠁧󠁢󠁳󠁣󠁴󠁿 Scotland and now 🇨🇭 Switzerland. <br> I also attended Y Combinator startup school. <br>
+                  <h1 class="username-lg"> Hello, my name is Evelina-Svitlana Protsenko but you can call me Lina. <br> I love  programming, travelling and learning new things. <br>
+                    <br> I had the chance to study math, programming  and game design <br> in 4 countries: <img src="src/emoji/ua.png" alt="ua emoji" class="flag"> Ukraine, <img src="src/emoji/ru.png" alt="ua emoji" class="flag"> Russia, <img src="src/emoji/sct.png" alt="ua emoji" class="flag"> Scotland and now <img src="src/emoji/ch.png" alt="ua emoji" class="flag"> Switzerland. <br> I also attended Y Combinator startup school. <br>
                     <br> Amongst too many things I'm curious about, I'm passionate about <br> technology, entrepreneurship, innovation, and the internet. <br>
                     <br> Right now I'm looking for an entry-level position in 💻 <a class="hero-name" alt="Lina's Work" href="/work.html" target="_blank">software development.</a>
                   </h1>
@@ -124,7 +124,7 @@
             <div class="container-fluid">
               <div class="col-1"></div>
               <div class="col-2">
-                <a class="navbar-brand" >Evelina-Svitlana Protsenko</a>
+                <a class="navbar-brand" href="/index.html" alt="Homepage">> $ cd /home/  <span class="terminal blink--1">&block;</span></a>
               </div>
               <div class="col-2"></div>
               <div class="col-6 text-end">
@@ -139,9 +139,7 @@
                   <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 text-center">
                       <li class="nav-item">
-                        <a class="nav-link  " href="/index.html" alt="Homepage">Home</a>
-                      <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" href="/about.html" alt="About Lina">About</a>
+                        <a class="nav-link " href="/about.html" alt="About Lina">About</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link " href="/work.html" alt="Lina's Work">Work</a>
