--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
     <script src="https://kit.fontawesome.com/0dcbce5e8a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/src/styles.css" />
-    <link rel="stylesheet" href="/src/styleContact.css">
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/styleContact.css">
   </head>
   <body>
     <div class="preloader">
@@ -233,7 +233,7 @@
             <div class="container-fluid">
               <div class="col-1"></div>
               <div class="col-2">
-                <a class="navbar-brand" >Evelina-Svitlana Protsenko</a>
+                <a class="navbar-brand" href="/index.html" alt="Homepage">> $ cd /home/  <span class="terminal blink--1">&block;</span></a>
               </div>
               <div class="col-2"></div>
               <div class="col-6 text-end">
@@ -248,15 +248,13 @@
                   <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 text-center">
                       <li class="nav-item">
-                        <a class="nav-link  " href="/index.html" alt="Homepage">Home</a>
-                      <li class="nav-item">
-                        <a class="nav-link  " href="/about.html" alt="About Lina">About</a>
+                        <a class="nav-link " href="/about.html" alt="About Lina">About</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link " href="/work.html" alt="Lina's Work">Work</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/contact.html" alt="Lina's contact">Contact</a>
+                        <a class="nav-link " href="/contact.html" alt="Lina's contact">Contact</a>
                       </li>
                       
                     </ul>
