--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/0dcbce5e8a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <div class="preloader">
@@ -26,7 +26,7 @@
                   <h1 class="username-lg">
                     <span class="hero-text-line">Hi, <a class="hero-name" href="/about.html" alt="About Lina">I'm Lina.</a> A software developer </span>
                     <br>
-                    <span class="hero-text-line">from 🇺🇦 based in Lausanne.</span>
+                    <span class="hero-text-line">from <img src="src/emoji/ua.png" alt="ua emoji" class="flag"> based in Lausanne.</span>
                     <br>
                     <span class="hero-text-line">Now available for hire.</span>
                     <br>
@@ -87,7 +87,7 @@
                   <h1 class="username-lg">
                     <span class="hero-text-line">Hi, <a class="hero-name" href="/about.html">I'm Lina.</a> A software developer </span>
                     <br>
-                    <span class="hero-text-line">from 🇺🇦 based in Lausanne.</span>
+                    <span class="hero-text-line">from 🇺🇦  based in Lausanne.</span>
                     <br>
                     <span class="hero-text-line">Now available for hire.</span>
                     <br>
@@ -162,7 +162,7 @@
             <div class="container-fluid">
               <div class="col-1"></div>
               <div class="col-2">
-                <a class="navbar-brand" >Evelina-Svitlana Protsenko</a>
+                <a class="navbar-brand" href="/index.html" alt="Homepage">> $ cd /home/  <span class="terminal blink--1">&block;</span></a>
               </div>
               <div class="col-2"></div>
               <div class="col-6 text-end">
@@ -176,8 +176,6 @@
                   </div>
                   <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 text-center">
-                      <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" href="/index.html" alt="Homepage">Home</a>
                       <li class="nav-item">
                         <a class="nav-link " href="/about.html" alt="About Lina">About</a>
                       </li>
